#                    "Merged from", "Cleanup", "Issue", "Adjustment"           #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

LP-2009-12-16-0: Cleanup:    o Added new question for retyping JMX password
                 Bugfix:     o SDM tests do not use ant specified in host
                               configuration
                 Bugfix:     o SDM testsuite properties should define 
                               supress.arch.check=true
                 Bugfix:     o SDM 571 test fails if SDM root is owned by root
                 Bugfix:     o It's possible that incorrect EXECD_PORT used in
                               SDM init_core_system
                 Review:     CR

RM-2009-12-14-0: Enhancem.:  o Hedeby issue 706 test               
                 Review:     RH

CR-2009-12-11-0: Cleanup:    o cleanup of issue test for IZ 126
                             o new test case for IZ 126 test:
                               test without prolog (Was a TODO in the test)
                             o some performance enhancements
                 Enhancem.:  o new procedure (not used by this check-in):
                               get_available_spawn_session_count()
                 Review:     SH

TB-2009-12-11-0: Enhancem.:  o Hedeby issue 554, performance improvement
                             o improved .cvsignore
                 Bugfix:     fixed TCL error in Hedeby remove_blacklisted
                 Review:     RH

JG-2009-12-11-0: Bugfix:     o binary_submission test: wait for path_alias file
                               to appear
                             o some cleanup in qalter and qmaster_size check